--- a/src/index.html
+++ b/src/index.html
@@ -45,12 +45,9 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'none'; connect-src 'self' http://localhost:4200/rest wss://localhost:4200/ https://localhost:3000; script-src 'unsafe-inline' 'unsafe-eval' 'self'; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; manifest-src 'self'"
     />
-    <meta name="author" content="Juergen Zimmermann" />
-    <meta name="description" content="Beispiel mit Angular" />
-    <meta
-      name="keywords"
-      content="Software Engineering,Angular,RxJS,REST,Bootstrap,Material Icons,ngx-charts"
-    />
+    <meta name="author" content="Gruppe8" />
+    <meta name="description" content="Filmbibliothek" />
+    <meta name="keywords" content="Filme,Studios,Schauspiele und vieles mehr" />
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
