--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,10 @@
     />
     <meta name="author" content="Gruppe8" />
     <meta name="description" content="Filmbibliothek" />
-    <meta name="keywords" content="Filme,Studios,Schlagwoerter und vieles mehr" />
+    <meta
+      name="keywords"
+      content="Filme,Studios,Schlagwoerter und vieles mehr"
+    />
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
