Änderung gefundene Schauspieler + prettier fixes

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     <meta name="description" content="Filmbibliothek" />
     <meta
       name="keywords"
-      content="Filme,Studios,Schlagwoerter und vieles mehr"
+      content="Filme,Studios,Schauspieler und vieles mehr"
     />
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
